demo ready front end

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.welcome{
+.welcome {
   height: 100%;
   background-image: url('https://hostpapa.blog/blog/wp-content/uploads/2016/01/E-Commerce-SEO-%E2%80%93-How-to-Do-It-Right.jpg');
   background-position: center;
@@ -31,15 +31,18 @@ code {
   margin: auto;
   left: 50%;
 } */
-
+#logo {
+  margin: 0;
+  padding: 0;
+}
 .ui.circular.massive.icon.button{
   height: 100px !important;
   width: 100px !important;
   font-size: 15px;
 }
-.ui.white.inverted.massive.menu{
-  background: #FF4D61;
-}
+/* .ui.massive.menu{
+  color: #FF4D61;
+} */
 #loging{
   color: white;
 }
@@ -49,4 +52,135 @@ code {
   margin-right: 500px;
   margin-left: 500px;
 
+
 }
+#bigHeader {
+  height: 180Px;
+  width: 100%;
+  position: center;
+  background-color: #FF4D61;
+  /* background-image: url('https://hostpapa.blog/blog/wp-content/uploads/2016/01/E-Commerce-SEO-%E2%80%93-How-to-Do-It-Right.jpg'); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin-top: -14px;
+  margin-bottom: 25px;
+
+
+
+
+}
+#pInsideBigHeader{
+
+  justify-content: center;
+  padding-top: 0;
+  font-size: 50px;
+  /* color: rgb(244,	239,	236); */
+
+  width: 170px;
+  z-index: 1;
+  font-weight: bold;
+  /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
+
+}
+#navvy {
+  margin: 0;
+}
+
+.ui.circular.massive.icon.button {
+  margin-top: 25px;
+
+}
+.ui.card>.image>img {
+  height: 233px !important;
+}
+
+
+/* img {
+  width: 36.5vh !important;
+  height: 30vh !important;
+} */
+#itemCards {
+  justify-content: center;
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+
+
+}
+
+.ui.five.secondary.item.menu{
+  width: 60%;
+}
+
+#totalPrice{
+  font-size: 30px;
+}
+
+#jj{
+  width: 60%;
+}
+.cartDiv {
+  display: block;
+}
+
+#itemForm{
+  width: 40%;
+  margin-left: 30%;
+  padding-bottom: 10%;
+}
+#itemDetail{
+  width: 40%;
+  margin-left: 30%;
+  /* margin-right: 30%;
+  padding: 50px;
+  border: solid 1px black; */
+  /* margin-bottom: -20%; */
+  height: 500px;
+}
+
+#itemSearch{
+  display: grid;
+  grid-template-columns: 75% 20%;
+  width: 50%;
+  margin-left: 27%;
+}
+#ser{
+  background-color: #FF4D61;
+}
+
+#profileCard{
+  position: fixed;
+  top: 250px;
+  right: 25px;
+}
+
+.ui.centered.card{
+  width: 350px;
+
+}
+
+
+#loginClick{
+  background-color: #FF4D61;
+}
+/* #itemDetailImage {
+  height: 243px !important;
+} */
+/* .cartDiv {
+  display: grid;
+  grid-template-columns: 40% 15% 15% 15% 15%;
+  grid-template-rows: 20% 20%;
+}
+
+#totalPrice{
+
+grid-column-start: -3
+} */
+/* #cartCard {
+  display: inline-block;
+} */
+/* #kocho {
+  justify-content: center;
+} */
